# rust

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: autoposter.rs  client.rs  error.rs  lib.rs  types.rs
