[package]
name = "toptl"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["TOP.TL <hello@top.tl>"]
description = "Official Rust SDK for the TOP.TL Telegram directory API — post stats, check votes, manage vote webhooks."
license = "MIT"
repository = "https://github.com/top-tl/rust"
homepage = "https://top.tl"
documentation = "https://docs.rs/toptl"
readme = "README.md"
keywords = ["telegram", "toptl", "bot", "directory", "api"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
